# rosidl_dynamic_typesupport

./: CHANGELOG.rst  CMakeLists.txt  README.md  glib-extras.cmake  package.xml
include/rosidl_dynamic_typesupport/: description.h  dynamic_message_type_support_struct.h  identifier.h  macros.h  tree_traverse.h  types.h  uchar.h  yaml_parser.h
include/rosidl_dynamic_typesupport/api/: dynamic_data.h  dynamic_type.h  serialization_support.h  serialization_support_interface.h
src/: description.c  dynamic_message_type_support_struct.c  identifier.c  tree_traverse.c  types.c  yaml_parser.c
src/api/: dynamic_data.c  dynamic_type.c  serialization_support.c
src/impl/: tree_traverse_impl.c  tree_traverse_impl.h
