<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rosidl_dynamic_typesupport</name>
  <version>0.1.2</version>
  <description>Unified serialization support interface for dynamic typesupport in C.</description>
  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>

  <license>Apache License 2.0</license>
  <author email="brandon@openrobotics.org">Brandon Ong</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rcutils</depend>
  <depend>rosidl_runtime_c</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
